--- a/css/buttons.css
+++ b/css/buttons.css
@@ -3,7 +3,7 @@
   overflow: visible;
   display: inline-block;
   padding: 0.5em 1em;
-  border: 1px solid #d4d4d4;
+  border: 1px solid #dbdbdb;
   margin: 0;
   text-decoration: none;
   text-align: center;
