--- a/css/kraken.css
+++ b/css/kraken.css
@@ -26,7 +26,7 @@
 
 @import url("switch.css");
 
-@import url("light_custom.css");
+@import url("custom.css");
 
 
 /*Kraken by @ivan_cduran (ivancduran.com)*/
