--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -3,7 +3,7 @@
     overflow: visible;
     display: inline-block;
     padding: 0.5em 1em;
-    border: 1px solid #d4d4d4;
+    border: 1px solid rgba(219, 219, 219, 1);
     margin: 0;
     text-decoration: none;
     text-align: center;
