--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -58,7 +58,8 @@
 
 /* Content styles */
 .md-content {
-  background: #ccc;
+  background: url("../img/noise.png");
+  background-color: #f4f4f4;
   position: relative;
   border-radius: 3px;
   margin: 0 auto;
@@ -68,10 +69,10 @@
   margin: 0;
   padding: 0.4em;
   text-align: center;
-  font-size: 2.4em;
+  font-size: 1.5em;
   font-weight: 300;
   opacity: 0.8;
-  background: rgba(0,0,0,0.1);
+  background: rgba(10, 10, 10, 0.04);
   border-radius: 3px 3px 0 0;
 }
 
