--- a/sass/progressbar.scss
+++ b/sass/progressbar.scss
@@ -1,32 +1,18 @@
 .progress {
   height: 20px;
-  background: #ebebeb;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-  border-radius: 10px;
-
-  -moz-box-shadow:inset 1px 1px 10px #6e6d6e;
-  -webkit-box-shadow:inset 1px 1px 10px #6e6d6e;
-  box-shadow:inset 1px 1px 10px #6e6d6e;
+  background: #fafafa;  
+  border-radius: 0;
 }
 .progress > span {
   position: relative;
   float: left;
   margin: 0 -1px;
   min-width: 30px;
-  height: 18px;
-  line-height: 18px;
+  height: 3px;
+  line-height: 20px;
   text-align: right;
   background: #cccccc;
-  border: 1px solid;
-  border-color: #bfbfbf #b3b3b3 #9e9e9e;
-  border-radius: 10px;
-  background-image: -webkit-linear-gradient(top, #f0f0f0, #dbdbdb 70%, #cccccc);
-  background-image: -moz-linear-gradient(top, #f0f0f0, #dbdbdb 70%, #cccccc);
-  background-image: -o-linear-gradient(top, #f0f0f0, #dbdbdb 70%, #cccccc);
-  background-image: linear-gradient(to bottom, #f0f0f0, #dbdbdb 70%, #cccccc);
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2);
+  border: 0; 
 }
 .progress > span > span {
   padding: 0 8px;
