--- a/css/grid.css
+++ b/css/grid.css
@@ -1,14 +1,17 @@
 .wrap {
-  max-width: 940px;
-  padding: 0 10px 0 10px;
+  max-width: 960pc;
+  padding: 0 10px;
   margin: 0 auto;
   min-height: 100%;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .grids {
   width: auto;
-  max-width: 940px;
-  /*margin: 0 0 0 -1.7%;*/
+  max-width: 960pc;
   list-style: none;
   /* So we can make grids out of lists. */
   overflow: visible;
@@ -19,7 +22,7 @@
 .grids [class*="grid-"],
 .footer [class*="grid-"] {
   display: inline-block;
-  margin: 0 0 0 1.3%;
+  margin: 0 0% 0 1.5%;
   -webkit-box-sizing: border-box;
   /* Allow padding & borders on grids without breaking. IE8+ */
   -moz-box-sizing: border-box;
@@ -29,118 +32,64 @@
   /* And restore our letter spacing. */
 }
 
-.grid-1 {
-  width: 6.3%;
+.grid-1,
+.non-1 {
+  width: 6.43333%;
 }
 
-.grid-2 {
-  width: 14.583%;
+.grid-2,
+.non-2 {
+  width: 14.66667%;
 }
 
-.grid-3 {
-  width: 22.917%;
+.grid-3,
+.non-3 {
+  width: 22.9%;
 }
 
 .grid-4,
-.grid-one-third {
-  width: 31.25%;
+.non-4 {
+  width: 31.13333%;
 }
 
-.grid-5 {
-  width: 39.583%;
+.grid-5,
+.non-5 {
+  width: 39.36667%;
 }
 
 .grid-6,
-.grid-half {
-  width: 47.917%;
+.non-6 {
+  width: 47.6%;
 }
 
-.grid-7 {
-  width: 56.25%;
+.grid-7,
+.non-7 {
+  width: 55.83333%;
 }
 
 .grid-8,
-.grid-two-thirds {
-  width: 64.583%;
+.non-8 {
+  width: 64.06667%;
 }
 
-.grid-9 {
-  width: 72.917%;
-}
-
-.grid-10 {
-  width: 81.25%;
-}
-
-.grid-11 {
-  width: 89.583%;
-}
-
-.grid-12 {
-  width: 97.45%;
-  /*width: 100%;*/
-  margin: 0;
-}
-
-.grid-0 {
-  width: 100%;
-  margin: 0;
-}
-
-.non-1 {
-  width: 6.3%;
-}
-
-.non-2 {
-  width: 14.583%;
-}
-
-.non-3 {
-  width: 22.917%;
-}
-
-.non-4,
-.non-one-third {
-  width: 31.25%;
-}
-
-.non-5 {
-  width: 39.583%;
-}
-
-.non-6,
-.non-half {
-  width: 47.917%;
-}
-
-.non-7 {
-  width: 56.25%;
-}
-
-.non-8,
-.non-two-thirds {
-  width: 64.583%;
-}
-
+.grid-9,
 .non-9 {
-  width: 72.917%;
+  width: 72.3%;
 }
 
+.grid-10,
 .non-10 {
-  width: 81.25%;
+  width: 80.53333%;
 }
 
+.grid-11,
 .non-11 {
-  width: 89.583%;
+  width: 88.76667%;
 }
 
+.grid-12,
 .non-12 {
-  width: 97.45%;
-  margin: 0;
-}
-
-.non-0 {
-  width: 100%;
+  width: 97%;
 }
 
 @media screen and (max-width: 700px) {
