--- a/sass/anim.scss
+++ b/sass/anim.scss
@@ -84,3 +84,15 @@
 }
 
 
+.animbubble{
+    animation: bubble 1s cubic-bezier(0,1,1,0);            
+}
+
+@keyframes bubble{
+    from {
+       transform: scale(1);
+    }
+    to {
+       transform: scale(1.5);
+    }
+}
