--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -364,3 +364,15 @@
     vertical-align: top;
 }
 
+.bubble{
+  background: #e02424;
+  position: absolute;
+  right: 5px;
+  top: -12px;
+  padding: 2px 6px;
+  color: #fff;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
