--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -1,24 +1,39 @@
+// * {
+//   margin: 0;
+//   padding: 0;
+//   position: relative;
+//   -webkit-box-sizing: border-box;
+//      -moz-box-sizing: border-box;
+//           box-sizing: border-box;
+// }
+
 .wrap {
-  max-width: 940px;
-  padding: 0 10px 0 10px;
+  max-width: 960pc;
+  padding: 0 10px;
+  // padding: 0 1.5rem;
   margin: 0 auto;
   min-height: 100%;
-  // fix toltip
+  
+  position: relative;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .grids {
   width: auto;
-  max-width: 940px;
-  /*margin: 0 0 0 -1.7%;*/
+  max-width: 960pc;
+  // margin: 0 0 0 -1.3%;
   list-style: none;
   /* So we can make grids out of lists. */
   overflow: visible;
   /* Clear the floats */
   clear: both;
 }
+
 .grids [class*="grid-"], .footer [class*="grid-"]{
   display: inline-block;
-  margin: 0 0 0 1.3%;
+  margin: 0 0% 0 1.5%;
   -webkit-box-sizing: border-box; /* Allow padding & borders on grids without breaking. IE8+ */
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -26,34 +41,35 @@
   letter-spacing: 0; /* And restore our letter spacing. */
 }
 
-.grid-1 {width: 6.3%;}
-.grid-2 {width: 14.583%;}
-.grid-3 {width: 22.917%;}
-.grid-4, .grid-one-third {width: 31.25%;}
-.grid-5 {width: 39.583%;}
-.grid-6, .grid-half {width: 47.917%;}
-.grid-7 {width: 56.25%;}
-.grid-8, .grid-two-thirds {width: 64.583%;}
-.grid-9 {width: 72.917%;}
-.grid-10 {width: 81.25%;}
-.grid-11 {width: 89.583%;}
-.grid-12 {width: 97.45%; /*width: 100%;*/ margin: 0;}
-/*.grid-12 {width: 97.195%; margin: 0;}*/
-.grid-0 {width: 100%; margin: 0;}
+// .grid-1 {width: 6.3%;}
+// .grid-2 {width: 14.583%;}
+// .grid-3 {width: 22.917%;}
+// .grid-4, .grid-one-third {width: 31.25%;}
+// .grid-5 {width: 39.583%;}
+// .grid-6, .grid-half {width: 47.917%;}
+// .grid-7 {width: 56.25%;}
+// .grid-8, .grid-two-thirds {width: 64.583%;}
+// .grid-9 {width: 72.917%;}
+// .grid-10 {width: 81.25%;}
+// .grid-11 {width: 89.583%;}
+// .grid-12 {width: 97.45%; /*width: 100%;*/ margin: 0;}
+// /*.grid-12 {width: 97.195%; margin: 0;}*/
+// .grid-0 {width: 100%; margin: 0;}
 
-.non-1 {width: 6.3%;}
-.non-2 {width: 14.583%;}
-.non-3 {width: 22.917%;}
-.non-4, .non-one-third {width: 31.25%;}
-.non-5 {width: 39.583%;}
-.non-6, .non-half {width: 47.917%;}
-.non-7 {width: 56.25%;}
-.non-8, .non-two-thirds {width: 64.583%;}
-.non-9 {width: 72.917%;}
-.non-10 {width: 81.25%;}
-.non-11 {width: 89.583%;}
-.non-12 {width: 97.45%; margin: 0;}
-.non-0 { width: 100%;}
+$mxgrid : 97;
+$systemgrid : 12;
+$unitgrid : ($mxgrid / $systemgrid);
+
+@for $i from 1 through $systemgrid {
+  .grid-#{$i},.non-#{$i}  {
+      @if $i == $systemgrid {
+        width: (($unitgrid * $i))  * 1%;
+      } @else {
+        $punto : ($systemgrid - $i ) * .15;
+        width: (($unitgrid * $i) - $punto)  * 1%;
+      }
+  }
+}
 
 @media screen and (max-width: 700px) {
   .grids {
