--- a/sass/kraken.scss
+++ b/sass/kraken.scss
@@ -16,6 +16,7 @@
 @import url('tooltip.css');
 @import url('caption.css');
 @import url('anim.css');
+@import url('switch.css');
 @import url('modal.css');
 // Custom CSS
 @import url('custom.css');
