--- a/css/anim.css
+++ b/css/anim.css
@@ -1,18 +1,23 @@
-.animated {
-  -webkit-animation-fill-mode: both;
-  -ms-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-duration: 1s;
-  -ms-animation-duration: 1s;
-  animation-duration: 1s;
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(359deg);
+  }
 }
-
-.animated.hinge {
-  -webkit-animation-duration: 1s;
-  -ms-animation-duration: 1s;
-  animation-duration: 1s;
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(359deg);
+  }
 }
-
+@-o-keyframes spin {
+  100% {
+    -moz-transform: rotate(359deg);
+  }
+}
+@keyframes spin {
+  100% {
+    transform: rotate(359deg);
+  }
+}
 @-webkit-keyframes shake {
   0%, 100% {
     -webkit-transform: translateX(0);
@@ -26,48 +31,148 @@
     -webkit-transform: translateX(10px);
   }
 }
+@-moz-keyframes shake {
+  0%, 100% {
+    -moz-transform: translateX(0);
+  }
 
+  10%, 30%, 50%, 70%, 90% {
+    -moz-transform: translateX(-10px);
+  }
+
+  20%, 40%, 60%, 80% {
+    -moz-transform: translateX(10px);
+  }
+}
+@-o-keyframes shake {
+  0%, 100% {
+    -o-transform: translateX(0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -o-transform: translateX(-10px);
+  }
+
+  20%, 40%, 60%, 80% {
+    -o-transform: translateX(10px);
+  }
+}
 @keyframes shake {
   0%, 100% {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
     transform: translateX(0);
   }
 
   10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translateX(-10px);
-    -ms-transform: translateX(-10px);
     transform: translateX(-10px);
   }
 
   20%, 40%, 60%, 80% {
-    -webkit-transform: translateX(10px);
-    -ms-transform: translateX(10px);
     transform: translateX(10px);
   }
+}
+@-moz-keyframes bounceOut {
+  0% {
+    box-shadow: 0 0 0 4px #4db8d6;
+    opacity: 1;
+  }
+
+  25% {
+    box-shadow: 0 0 0 1px #4db8d6;
+    opacity: 1;
+  }
+
+  50% {
+    box-shadow: 0 0 0 7px #4db8d6;
+    opacity: 1;
+  }
+
+  75% {
+    box-shadow: 0 0 0 4px #4db8d6;
+    opacity: 1;
+  }
+
+  100% {
+    box-shadow: 0 0 0 5px #4db8d6;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes bounceOut {
+  0% {
+    box-shadow: 0 0 0 4px #4db8d6;
+    opacity: 1;
+  }
+
+  25% {
+    box-shadow: 0 0 0 1px #4db8d6;
+    opacity: 1;
+  }
+
+  50% {
+    box-shadow: 0 0 0 7px #4db8d6;
+    opacity: 1;
+  }
+
+  75% {
+    box-shadow: 0 0 0 4px #4db8d6;
+    opacity: 1;
+  }
+
+  100% {
+    box-shadow: 0 0 0 5px #4db8d6;
+    opacity: 1;
+  }
+}
+.animated {
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.animated.hinge {
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .shake {
   -webkit-animation-name: shake;
+  -moz-animation-name: shake;
+  -ms-animation-name: shake;
+  -o-animation-name: shake;
   animation-name: shake;
   border: 1px solid red !important;
 }
 
 .sken {
   -webkit-transform: skew(180deg, 90deg);
+  -moz-transform: skew(180deg, 90deg);
   -ms-transform: skew(180deg, 90deg);
+  -o-transform: skew(180deg, 90deg);
   transform: skew(180deg, 90deg);
 }
 
 .scale {
   -webkit-transform: scale(3);
+  -moz-transform: scale(3);
   -ms-transform: scale(3);
+  -o-transform: scale(3);
   transform: scale(3);
 }
 
 .rotate {
   -webkit-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
+  -moz-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
   -ms-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
+  -o-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
   transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
 }
 
@@ -77,52 +182,44 @@
   border-width: 30px;
   border-radius: 50%;
   -webkit-animation: spin 1s linear infinite;
+  -moz-animation: spin 1s linear infinite;
+  -ms-animation: spin 1s linear infinite;
+  -o-animation: spin 1s linear infinite;
   animation: spin 1s linear infinite;
   border-style: double;
-  border-color: #19bee1 transparent;
-}
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(359deg);
-  }
-}
-
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(359deg);
-    -ms-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
+  border-color: #4db8d6 transparent;
 }
 
 .animbubble {
-  -webkit-animation: bubble 1s cubic-bezier(0, 1, 1, 0);
-  animation: bubble 1s cubic-bezier(0, 1, 1, 0);
+  -webkit-transition: all 1s cubic-bezier(0.1, 0.1, 0.25, 0.9);
+  -moz-transition: all 1s cubic-bezier(0.1, 0.1, 0.25, 0.9);
+  -ms-transition: all 1s cubic-bezier(0.1, 0.1, 0.25, 0.9);
+  -o-transition: all 1s cubic-bezier(0.1, 0.1, 0.25, 0.9);
+  transition: all 1s cubic-bezier(0.1, 0.1, 0.25, 0.9);
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
-@-webkit-keyframes bubble {
-  from {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-
-  to {
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
-  }
+.circle {
+  padding: 10px;
+}
+.circle img.user {
+  background-color: #4db8d6;
+  box-shadow: 0 0 0 3px #4db8d6;
+  border-radius: 50%;
+}
+.circle img.user:hover {
+  cursor: pointer;
+  -moz-animation: bounceOut .5s linear;
+  -webkit-animation: bounceOut .5s linear;
 }
 
-@keyframes bubble {
-  from {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-  }
-
-  to {
-    -webkit-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    transform: scale(1.5);
-  }
+.focus:hover {
+  box-shadow: 0 0 8px 1px #4db8d6;
+  cursor: pointer;
+  -moz-animation: bounceOut .4s linear;
+  -webkit-animation: bounceOut .4s linear;
 }
