--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,10 @@
 body {
   background-color: #f0f0f0;
+  color: #333333;
+}
+
+h1 {
+  color: #333333;
 }
 
 .wrap {
@@ -7,14 +12,12 @@ body {
 }
 
 /*landscape phone*/
-
 @media screen and (max-width: 700px) {
   .wrap {
     margin-left: 2%;
     margin-right: 2%;
   }
 }
-
 .container {
   background-color: #ffffff;
   border: 1px solid #e0e1db;
