--- a/css/font.css
+++ b/css/font.css
@@ -1,18 +1,15 @@
 /*Font Face*/
-
 @font-face {
   font-family: 'Lato';
   src: url("fonts/Lato.woff") format("woff");
 }
-
 /*DOM Elements*/
-
 body {
   font: 100%/1.5 'Lato','Helvetica Neue', sans-serif;
+  color: #333333;
 }
 
-h1,
-.size-1 {
+h1, .size-1 {
   font-size: 3em;
   /* 48 / 16 */
   line-height: 1em;
@@ -21,19 +18,17 @@ h1,
   /* 24 / 48 */
 }
 
-h2,
-.size-2 {
+h2, .size-2 {
   font-size: 2.25em;
   /* 36 / 16 */
   line-height: 1.33333em;
   /* 48 / 36 */
   margin-bottom: 0.66667em;
   /* 24 / 36 */
-  color: #02A2E9;
+  color: #02a2e9;
 }
 
-h3,
-.size-3 {
+h3, .size-3 {
   font-size: 1.5em;
   /* 24 / 16 */
   line-height: 1em;
@@ -42,8 +37,7 @@ h3,
   /* 24 / 24 */
 }
 
-h4,
-.size-4 {
+h4, .size-4 {
   font-size: 1.3125em;
   /* 21 / 16 */
   line-height: 1.14286em;
@@ -52,8 +46,7 @@ h4,
   /* 24 / 21 */
 }
 
-h5,
-.size-5 {
+h5, .size-5 {
   font-size: 1.125em;
   /* 18 / 16 */
   line-height: 1.33333em;
@@ -62,8 +55,7 @@ h5,
   /* 24 / 18 */
 }
 
-h6,
-.size-6 {
+h6, .size-6 {
   font-size: 1em;
   /* 16 / 16 */
   line-height: 1.5em;
@@ -72,11 +64,7 @@ h6,
   /* 24 / 16 */
 }
 
-p,
-ul,
-ol,
-dl,
-blockquote {
+p, ul, ol, dl, blockquote {
   margin-bottom: 1.5em;
   /* 24 / 16 */
 }
