--- a/css/menu.css
+++ b/css/menu.css
@@ -8,6 +8,9 @@
 .menuMove {
   background-color: #141414;
   -webkit-transition: background-color 1s ease-in-out;
+  -moz-transition: background-color 1s ease-in-out;
+  -ms-transition: background-color 1s ease-in-out;
+  -o-transition: background-color 1s ease-in-out;
   transition: background-color 1s ease-in-out;
 }
 
@@ -17,7 +20,6 @@
 }
 
 /* nav */
-
 .nav {
   position: relative;
   margin: 0px 0;
@@ -55,30 +57,27 @@
   /*background: #999;*/
   color: #fff;
   border-radius: 5px;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#cacaca), to(#848484));
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#428bca), to(#1d6fa5));
+  background-image: -moz-linear-gradient(top, #428bca, #1d6fa5);
 }
 
 /* left nav */
-
 .nav.left ul {
   text-align: left;
   /*padding-left: 25px;*/
 }
 
 /* right nav */
-
 .nav.right ul {
   text-align: right;
 }
 
 /* center nav */
-
 .nav.center ul {
   text-align: center;
 }
 
 /*Sub Menu */
-
 .nav li ul {
   position: absolute;
   visibility: hidden;
@@ -92,8 +91,7 @@
   margin: 0px;
 }
 
-.nav li ul li a:link,
-.nav li ul li a:visited {
+.nav li ul li a:link, .nav li ul li a:visited {
   background-color: #141414;
   width: 72%;
   display: table;
@@ -109,7 +107,6 @@
     border-top: solid 1px #aaa;
     background: url("../img/bgBorde.png") repeat-x;
     background-position: 0px 0px;
-    -webkit-background-size: 80px 60px;
     background-size: 80px 60px;
   }
 
@@ -127,9 +124,16 @@
     left: 0;
     background: white url("../img/icon-menu.png") no-repeat 10px 11px;
     border: solid 0px #aaa;
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    -webkit-border-bottom-right-radius: 5px;
+    -moz-border-bottom-right-radius: 5px;
+    -ms-border-bottom-right-radius: 5px;
+    -o-border-bottom-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-bottom-left-radius: 5px;
+    -ms-border-bottom-left-radius: 5px;
+    -o-border-bottom-left-radius: 5px;
     border-bottom-left-radius: 5px;
   }
 
@@ -156,31 +160,35 @@
   }
 
   /* on nav hover */
-
   .nav ul:hover {
     background-image: none;
   }
 
+  /*  .nav ul:hover li {
+      display: block;
+      margin: 0 0 5px;
+    }*/
+  /*  .click {
+      display: block;
+      margin: 0 0 5px;
+    }*/
   .nav ul:hover .current {
     background: url("../img/icon-check.png") no-repeat 10px 7px;
   }
 
   /* right nav */
-
   .nav.right ul {
     left: auto;
     right: 0;
   }
 
   /* center nav */
-
   .nav.center ul {
     left: 50%;
     margin-left: -90px;
   }
 
   /*Sub Menu*/
-
   .nav li ul {
     position: relative;
     visibility: visible;
@@ -205,8 +213,7 @@
     border-radius: 0px;
   }
 
-  .nav li ul li a:link,
-  .nav li ul li a:visited {
+  .nav li ul li a:link, .nav li ul li a:visited {
     background-color: #ccc;
   }
 
