--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,39 @@
 /*fix wrap*/
-
-html,
-body {
+html, body {
   height: auto;
   min-height: 100%;
   height: 100%;
 }
 
-nav,
-li,
-img,
-.progress > span {
+nav, li, img, .progress > span {
   -webkit-transition: all 0.5s cubic-bezier(0.5, 0.885, 0.32, 1.1);
+  -moz-transition: all 0.5s cubic-bezier(0.5, 0.885, 0.32, 1.1);
+  -ms-transition: all 0.5s cubic-bezier(0.5, 0.885, 0.32, 1.1);
+  -o-transition: all 0.5s cubic-bezier(0.5, 0.885, 0.32, 1.1);
   transition: all 0.5s cubic-bezier(0.5, 0.885, 0.32, 1.1);
 }
 
-input[type=text],
-input[type=password],
-textarea {
+input, textarea {
   border: 1px solid #aaaaaa;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
   border-radius: 3px;
+}
+
+.input {
+  border: 1px solid #aaaaaa;
   padding-left: 5px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
   -webkit-box-shadow: inset 0px 0px 15px #c9c9c9;
+  -moz-box-shadow: inset 0px 0px 15px #c9c9c9;
+  -ms-box-shadow: inset 0px 0px 15px #c9c9c9;
+  -o-box-shadow: inset 0px 0px 15px #c9c9c9;
   box-shadow: inset 0px 0px 15px #c9c9c9;
 }
 
@@ -81,6 +93,9 @@ footer {
 
 .inset {
   -webkit-box-shadow: inset 1px 1px 17px #6e6d6e;
+  -moz-box-shadow: inset 1px 1px 17px #6e6d6e;
+  -ms-box-shadow: inset 1px 1px 17px #6e6d6e;
+  -o-box-shadow: inset 1px 1px 17px #6e6d6e;
   box-shadow: inset 1px 1px 17px #6e6d6e;
 }
 
@@ -91,8 +106,11 @@ footer {
 }
 
 .shadow {
-  -webkit-box-shadow: 0 8px 6px -6px #ccc;
-  box-shadow: 0 8px 6px -6px #ccc;
+  -webkit-box-shadow: 0 8px 6px -6px #cccccc;
+  -moz-box-shadow: 0 8px 6px -6px #cccccc;
+  -ms-box-shadow: 0 8px 6px -6px #cccccc;
+  -o-box-shadow: 0 8px 6px -6px #cccccc;
+  box-shadow: 0 8px 6px -6px #cccccc;
 }
 
 .Back {
@@ -121,6 +139,19 @@ footer {
 .footer {
   background: #474747;
   padding-top: 10px;
+}
+
+.line {
+  border: none;
+  color: #333;
+  background: transparent;
+  border-bottom: 1px solid #999;
+  padding: 5px 2px 0 2px;
+}
+
+.line:focus {
+  outline: none;
+  border-color: #51CBEE;
 }
 
 .footer a :link {
@@ -167,6 +198,7 @@ footer {
   z-index: -20;
   top: 0px;
   opacity: .2;
+  -moz-box-shadow: 0px 0px 18px #333;
   -webkit-box-shadow: 0px 0px 18px #333;
   box-shadow: 0px 0px 18px #333;
 }
