--- a/sass/anim.scss
+++ b/sass/anim.scss
@@ -1,71 +1,5 @@
-.animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}.animated.hinge{-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}@-webkit-keyframes shake {
-	0%, 100% {-webkit-transform: translateX(0);}	10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
-}
-
-@-moz-keyframes shake {
-	0%, 100% {-moz-transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {-moz-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-moz-transform: translateX(10px);}
-}
-
-@-o-keyframes shake {
-	0%, 100% {-o-transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {-o-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-o-transform: translateX(10px);}
-}
-
-@keyframes shake {
-	0%, 100% {transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {transform: translateX(10px);}
-}
-
-.shake {
-	-webkit-animation-name: shake;
-	-moz-animation-name: shake;
-	-o-animation-name: shake;
-	animation-name: shake;
-	border: 1px solid red !important;
-}
-
-.sken{
-	-webkit-transform: skew(180deg, 90deg);
-	-moz-transform: skew(180deg, 90deg);
-	-o-transform: skew(180deg, 90deg);
-	-ms-transform: skew(180deg, 90deg);
-	transform: skew(180deg, 90deg);
-}
-
-.scale{
-	-webkit-transform: scale(3);
-	-moz-transform: scale(3);
-	-o-transform: scale(3);
-	-ms-transform: scale(3);
-	transform: scale(3);
-}
-
-.rotate{
-	-webkit-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-	-moz-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-	-o-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-	-ms-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-	transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-}
-
-
-.loading {
-  display: inline-block;
-  margin: 5em;
-  border-width: 30px;
-  border-radius: 50%;
-  -webkit-animation: spin 1s linear infinite;
-     -moz-animation: spin 1s linear infinite;
-       -o-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
-  border-style: double;
-  border-color: #19bee1 transparent;
-}
+@import '_mixins';
+@import '_colors';
 
 @-webkit-keyframes spin {
   100% { -webkit-transform: rotate(359deg); }
@@ -83,16 +17,119 @@
   100% {  transform: rotate(359deg); }
 }
 
-
-.animbubble{
-    animation: bubble 1s cubic-bezier(0,1,1,0);            
+@-webkit-keyframes shake {
+	0%, 100% {-webkit-transform: translateX(0);}
+	10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
+	20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
 }
 
-@keyframes bubble{
-    from {
-       transform: scale(1);
+@-moz-keyframes shake {
+	0%, 100% {-moz-transform: translateX(0);}
+	10%, 30%, 50%, 70%, 90% {-moz-transform: translateX(-10px);}
+	20%, 40%, 60%, 80% {-moz-transform: translateX(10px);}
+}
+
+@-o-keyframes shake {
+	0%, 100% {-o-transform: translateX(0);}
+	10%, 30%, 50%, 70%, 90% {-o-transform: translateX(-10px);}
+	20%, 40%, 60%, 80% {-o-transform: translateX(10px);}
+}
+
+@keyframes shake {
+	0%, 100% {
+		transform: translateX(0);
+	}
+	10%, 30%, 50%, 70%, 90% {
+		transform: translateX(-10px);
+	}
+	20%, 40%, 60%, 80% {
+		transform: translateX(10px);
+	}
+}
+
+@-moz-keyframes bounceOut {
+        0%{ box-shadow: 0 0 0 4px $Anim_Color1; opacity:1;}
+        25%{ box-shadow: 0 0 0 1px $Anim_Color1; opacity:1;}
+        50%{ box-shadow: 0 0 0 7px $Anim_Color1; opacity:1; }
+        75%{ box-shadow: 0 0 0 4px $Anim_Color1; opacity:1;}
+        100%{ box-shadow: 0 0 0 5px $Anim_Color1; opacity:1;}
+}
+
+@-webkit-keyframes bounceOut {
+        0%{ box-shadow: 0 0 0 4px $Anim_Color1; opacity:1;}
+        25%{ box-shadow: 0 0 0 1px $Anim_Color1; opacity:1;}
+        50%{ box-shadow: 0 0 0 7px $Anim_Color1; opacity:1; }
+        75%{ box-shadow: 0 0 0 4px $Anim_Color1; opacity:1;}
+        100%{ box-shadow: 0 0 0 5px $Anim_Color1; opacity:1;}
+}
+
+.animated{
+	@include vendorize(animation-fill-mode,both);
+	@include vendorize(animation-duration,1s);
+}
+
+.animated.hinge{
+	@include vendorize(animation-duration,1s);
+}
+
+.shake {
+	@include vendorize(animation-name,shake);
+	border: 1px solid red !important;
+}
+
+.sken{
+	@include vendorize(transform,skew(180deg, 90deg));
+}
+
+.scale{
+	@include vendorize(transform,scale(3));
+}
+
+.rotate{
+	@include vendorize(transform,rotateX(360deg) rotateY(320deg) rotateZ(1080deg));
+}
+
+.loading {
+  display: inline-block;
+  margin: 5em;
+  border-width: 30px;
+  border-radius: 50%;
+  @include vendorize(animation,spin 1s linear infinite);
+  border-style: double;
+  border-color: $Anim_Color1 transparent;
+}
+
+.animbubble{
+	@include vendorize(transition, all 1s cubic-bezier(.10, .10, .25, .90));
+	@include vendorize(transform, scale(1.3));
+}
+
+.circle {
+  padding: 10px;
+
+  img.user {
+    background-color: $Anim_Color1 ;
+    box-shadow: 0 0 0 3px $Anim_Color1 ;
+    border-radius: 50%;
+
+     &:hover {
+      cursor: pointer; 
+      -moz-animation:bounceOut .5s linear;
+      -webkit-animation:bounceOut .5s linear;
+      // @include vendorize(transform,scale(1));
     }
-    to {
-       transform: scale(1.5);
+  
+  }
+
+}
+
+.focus{
+    // background-color: $Anim_Color1 ;
+
+     &:hover {
+	  box-shadow: 0 0 8px 1px $Anim_Color1 ;
+      cursor: pointer; 
+      -moz-animation:bounceOut .4s linear;
+      -webkit-animation:bounceOut .4s linear;
     }
 }
