--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,7 +1,17 @@
 // Custom
+
+$color0 : #333;
+$color1 : #999;
+$color2 : #5c84a9;
+
 body {
   // background: url("../img/noise.png");
   background-color: #f0f0f0;
+  color : $color0;
+}
+
+h1{
+  color : $color0;
 }
 
 .wrap { 
