--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,3 +1,5 @@
+@import '_mixins';
+
 #menu {
   top: 0;
   position: fixed;
@@ -7,11 +9,7 @@
 
 .menuMove{
   background-color: #141414;
-  -webkit-transition: background-color 1s ease-in-out;
-  -moz-transition: background-color 1s ease-in-out;
-  -ms-transition: background-color 1s ease-in-out;
-  -o-transition: background-color 1s ease-in-out;
-  transition: background-color 1s ease-in-out;
+  @include vendorize(transition,background-color 1s ease-in-out);
 }
 
 .menuTop{
@@ -52,8 +50,8 @@
   /*background: #999;*/
   color: #fff;
   border-radius: 5px;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#cacaca), to(#848484));
-  background-image: -moz-linear-gradient(top, #cacaca, #848484);
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#428bca), to(#1d6fa5));
+  background-image: -moz-linear-gradient(top, #428bca, #1d6fa5);
 }
 
 /* left nav */
@@ -123,12 +121,10 @@
     background: #fff url('../img/icon-menu.png') no-repeat 10px 11px;
     border: solid 0px #aaa;
     box-shadow: 0 1px 2px rgba(0,0,0,.3);
-    -webkit-border-bottom-right-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-radius-bottomright: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+
+    @include vendorize(border-bottom-right-radius,5px);
+    @include vendorize(border-bottom-left-radius,5px);
+    
   }
   .nav li {
     display: none; /* hide all <li> items */
