--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,25 +1,29 @@
 /*fix wrap*/
+@import '_mixins';
+
 html, body {
     height: auto;
 	min-height: 100%;
 	height: 100%;
+
 }
 
 nav, li, img, .progress > span {
-	-webkit-transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-	-moz-transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-	transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
+	@include vendorize(transition,all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1));
 }
 
-input[type=text], input[type=password] ,textarea{
+
+input, textarea {
 	border: 1px solid #aaaaaa;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
+	// @include vendorize(box-shadow,none);
+	@include vendorize(border-radius,3px);
+}
+
+.input{
+	border: 1px solid #aaaaaa;
 	padding-left: 5px;
-	-moz-box-shadow:inset 0px 0px 15px #c9c9c9;
-	-webkit-box-shadow:inset 0px 0px 15px #c9c9c9;
-	box-shadow:inset 0px 0px 15px #c9c9c9;
+	@include vendorize(border-radius,3px);
+	@include vendorize(box-shadow,inset 0px 0px 15px #c9c9c9);
 }
 
 hr{
@@ -82,9 +86,7 @@ footer {
 }
 
 .inset{
-	-moz-box-shadow:inset 1px 1px 17px #6e6d6e;
-	-webkit-box-shadow:inset 1px 1px 17px #6e6d6e;
-	box-shadow:inset 1px 1px 17px #6e6d6e;
+	@include vendorize(box-shadow,inset 1px 1px 17px #6e6d6e);
 }
 
 .solid{
@@ -94,9 +96,7 @@ footer {
 }
 
 .shadow{
-	-webkit-box-shadow: 0 8px 6px -6px #ccc;
-	-moz-box-shadow: 0 8px 6px -6px #ccc;
-	box-shadow: 0 8px 6px -6px #ccc;
+	@include vendorize(box-shadow,0 8px 6px -6px #ccc);
 }
 
 .Back{
@@ -129,6 +129,19 @@ footer {
 .footer{
 	background: #474747;
 	padding-top:10px;
+}
+
+.line {
+	border: none;
+	color: #333;
+	background: transparent;
+	border-bottom: 1px solid #999;
+	padding: 5px 2px 0 2px;
+}
+
+.line:focus { 
+  outline: none;
+  border-color: #51CBEE;
 }
 
 .footer a :link {text-decoration:none !important;}
