--- a/css/font.css
+++ b/css/font.css
@@ -25,7 +25,7 @@ h2, .size-2 {
   /* 48 / 36 */
   margin-bottom: 0.66667em;
   /* 24 / 36 */
-  color: #02a2e9;
+  color: #3598db;
 }
 
 h3, .size-3 {
