--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
 }
 
 .menuMove {
-  background-color: #141414;
+  background-color: #343131;
   -webkit-transition: background-color 1s ease-in-out;
   -moz-transition: background-color 1s ease-in-out;
   -ms-transition: background-color 1s ease-in-out;
@@ -15,8 +15,7 @@
 }
 
 .menuTop {
-  /*border-bottom: 2px solid #0fa1e0;*/
-  background: url("../img/nav-bg.png") 48% 85% no-repeat;
+  background-color: #343131;
 }
 
 /* nav */
@@ -53,12 +52,17 @@
   border-radius: 5px;
 }
 
+ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
 .nav .current a {
   /*background: #999;*/
   color: #fff;
   border-radius: 5px;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#428bca), to(#1d6fa5));
-  background-image: -moz-linear-gradient(top, #428bca, #1d6fa5);
+  background: #3598db;
 }
 
 /* left nav */
@@ -91,6 +95,12 @@
   margin: 0px;
 }
 
+.nav li ul li a {
+  background-color: #141414;
+  width: 72%;
+  display: table;
+}
+
 .nav li ul li a:link, .nav li ul li a:visited {
   background-color: #141414;
   width: 72%;
@@ -98,7 +108,7 @@
 }
 
 .nav li ul li a:hover {
-  background-color: #32323a;
+  background-color: #999999;
   border-radius: 0px;
 }
 
