--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,23 @@
-/*fix wrap*/
 html, body {
   height: auto;
   min-height: 100%;
   height: 100%;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
 
 nav, li, img, .progress > span {
@@ -14,6 +29,7 @@ nav, li, img, .progress > span {
 }
 
 input, textarea {
+  outline: none;
   border: 1px solid #aaaaaa;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -21,20 +37,9 @@ input, textarea {
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-
-.input {
-  border: 1px solid #aaaaaa;
-  padding-left: 5px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0px 0px 15px #c9c9c9;
-  -moz-box-shadow: inset 0px 0px 15px #c9c9c9;
-  -ms-box-shadow: inset 0px 0px 15px #c9c9c9;
-  -o-box-shadow: inset 0px 0px 15px #c9c9c9;
-  box-shadow: inset 0px 0px 15px #c9c9c9;
+input:focus, textarea:focus {
+  box-shadow: 0 0 3px 1px #3598db;
+  border: 1px solid #2980b7;
 }
 
 hr {
@@ -56,6 +61,21 @@ footer {
   z-index: -20;
   bottom: 0px;
   left: 0px;
+}
+
+.input {
+  border: 1px solid #aaaaaa;
+  padding-left: 5px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0px 0px 15px #c9c9c9;
+  -moz-box-shadow: inset 0px 0px 15px #c9c9c9;
+  -ms-box-shadow: inset 0px 0px 15px #c9c9c9;
+  -o-box-shadow: inset 0px 0px 15px #c9c9c9;
+  box-shadow: inset 0px 0px 15px #c9c9c9;
 }
 
 .arrowL {
@@ -84,6 +104,19 @@ footer {
   text-align: center;
 }
 
+.info-box {
+  border-radius: 4px;
+  background-color: #fafafa;
+  margin: 0px;
+}
+.info-box > .info-title {
+  margin-left: 2%;
+  font-size: 1.3em;
+}
+.info-box > .info-text {
+  margin: 15px;
+}
+
 .box {
   border-radius: 4px;
   background-color: #fafafa;
@@ -103,6 +136,10 @@ footer {
   background: #fafafa;
   color: #373737;
   border: 1px solid #c1ccd4;
+}
+
+.span {
+  margin-bottom: 35px;
 }
 
 .shadow {
@@ -136,11 +173,6 @@ footer {
   height: 0;
 }
 
-.footer {
-  background: #474747;
-  padding-top: 10px;
-}
-
 .line {
   border: none;
   color: #333;
@@ -148,10 +180,18 @@ footer {
   border-bottom: 1px solid #999;
   padding: 5px 2px 0 2px;
 }
-
 .line:focus {
   outline: none;
+  border: none;
+  box-shadow: none;
+  box-shadow: 0 2px 1px -1px #3598db;
+  border-bottom: 1px solid #2980b7;
   border-color: #51CBEE;
+}
+
+.footer {
+  background: #474747;
+  padding-top: 10px;
 }
 
 .footer a :link {
@@ -215,15 +255,16 @@ footer {
 }
 
 .break-a {
-  width: 413px;
+  max-width: 100%;
   height: 21px;
-  background: url("../img/break-a.png") no-repeat;
+  background: url("../img/break-a.png") no-repeat 100%;
+  background-position: center;
   margin: 0 auto;
 }
 
 .break-b {
-  width: 413px;
+  max-width: 100%;
   height: 21px;
-  background: url("../img/break-b.png") no-repeat;
+  background: url("../img/break-b.png") no-repeat 100%;
   margin: 0 auto;
 }
