--- a/css/switch.css
+++ b/css/switch.css
@@ -1,20 +1,18 @@
 .switch {
   cursor: pointer;
   position: relative;
-  display: inline-block;  
+  display: inline-block;
   padding: 0 1.25rem;
   border-radius: 4px;
   border: 1px solid #a5a8a8;
   overflow: hidden;
   width: 5rem;
-
   z-index: 0;
-  
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
   box-sizing: border-box;
-
 }
 
 .switch__input {
@@ -24,7 +22,6 @@
   margin: 0;
   padding: 0;
   border: 0;
-
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0.1)";
   filter: alpha(opacity=0.1);
   opacity: 0.001;
@@ -41,23 +38,25 @@
   background: transparent;
   border: none;
   cursor: default;
-
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
   box-sizing: border-box;
-
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
+  -ms-background-clip: padding-box;
+  -o-background-clip: padding-box;
   background-clip: padding-box;
-
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  -o-user-select: none;
   user-select: none;
-
-  -o-text-overflow: ellipsis;
+  -webkit-text-overflow: ellipsis;
+  -moz-text-overflow: ellipsis;
   -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -70,19 +69,17 @@
   border-radius: 4px;
   color: #454545;
   text-shadow: 0 1px #fff;
-  background-color: #e5e9e8;  
+  background-color: #e5e9e8;
   border: 1px solid #a5a8a8;
   margin-left: -1.3rem;
-  margin-bottom:-1px;
-  margin-top:-1px;
-
+  margin-bottom: -1px;
+  margin-top: -1px;
   -webkit-box-shadow: inset 0 1px #fff;
   box-shadow: inset 0 1px #fff;
-  
   -webkit-transition: margin-left 0.05s ease-in-out;
   -moz-transition: margin-left 0.05s ease-in-out;
-  -o-transition: margin-left 0.05s ease-in-out;
   -ms-transition: margin-left 0.05s ease-in-out;
+  -o-transition: margin-left 0.05s ease-in-out;
   transition: margin-left 0.05s ease-in-out;
 }
 
@@ -93,13 +90,12 @@
 .switch__toggle:before,
 .switch__toggle:after {
   position: absolute;
-  
   width: 5rem;
   z-index: -1;
- 
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
   box-sizing: border-box;
 }
 
