--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -47,6 +47,12 @@ $unitgrid : ($mxgrid / $systemgrid);
   }
 }
 
+.full-grid{
+  // margin: 0 0% 0 -9.5%;
+  width: 100%;
+}
+
+
 @media screen and (max-width: 700px) {
   .grids {
     margin: 0;
