--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,4 +1,5 @@
 @import '_mixins';
+@import '_colors';
 
 #menu {
   top: 0;
@@ -8,13 +9,14 @@
 }
 
 .menuMove{
-  background-color: #141414;
+  background-color: $Menu_BG;
   @include vendorize(transition,background-color 1s ease-in-out);
 }
 
 .menuTop{
-  /*border-bottom: 2px solid #0fa1e0;*/
-  background: url('../img/nav-bg.png') 48% 85% no-repeat;
+  // border-bottom: 2px solid #0fa1e0;
+  // background: url('../img/nav-bg.png') 48% 85% no-repeat;
+  background-color: $Menu_BG;
 }
 
 /* nav */
@@ -39,19 +41,27 @@
   text-decoration: none;
   color: #999;
   line-height: 100%;
+  // @include vendorize(transition,.3s);
 }
-.nav a:hover {
+.nav a:hover{
   color: #000;
-    background: #999;
+  background: #999;
   color: #fff;
   border-radius: 5px;
 }
+
+ul li:hover ul{
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
 .nav .current a {
   /*background: #999;*/
   color: #fff;
   border-radius: 5px;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#428bca), to(#1d6fa5));
-  background-image: -moz-linear-gradient(top, #428bca, #1d6fa5);
+  background: $palette_1_3;
+  // @include vendorize(box-shadow, inset 0px 15px 84px -5px $palette_2_3);
 }
 
 /* left nav */
@@ -85,6 +95,14 @@
   margin: 0px;
 }
 
+.nav li ul li a{
+  // border:1px solid red;
+  background-color:#141414;
+  width: 72%;
+  display: table;
+
+}
+
 .nav li ul li a:link, .nav li ul li a:visited {
   background-color:#141414;
   width: 72%;
@@ -92,7 +110,7 @@
 }
 
 .nav li ul li a:hover{
-  background-color: #32323a;
+  background-color: $Menu_Hover;
   border-radius: 0px;
 }
 
