--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
-/*fix wrap*/
 @import '_mixins';
+@import '_colors';
 
 html, body {
     height: auto;
@@ -8,23 +8,27 @@ html, body {
 
 }
 
+a:link {text-decoration:none;}
+a:visited {text-decoration:none;}
+a:hover {text-decoration:none;}
+a:active {text-decoration:none;}
+
 nav, li, img, .progress > span {
 	@include vendorize(transition,all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1));
 }
 
 
 input, textarea {
+	outline: none;
 	border: 1px solid #aaaaaa;
 	// @include vendorize(box-shadow,none);
 	@include vendorize(border-radius,3px);
+	&:focus{
+		box-shadow: 0 0 3px 1px $palette_1_3 ;
+		border: 1px solid $palette_2_3;
+	}
 }
 
-.input{
-	border: 1px solid #aaaaaa;
-	padding-left: 5px;
-	@include vendorize(border-radius,3px);
-	@include vendorize(box-shadow,inset 0px 0px 15px #c9c9c9);
-}
 
 hr{
 	border: 0;
@@ -45,6 +49,13 @@ footer {
 	z-index: -20;
 	bottom: 0px;
 	left: 0px;
+}
+
+.input{
+	border: 1px solid #aaaaaa;
+	padding-left: 5px;
+	@include vendorize(border-radius,3px);
+	@include vendorize(box-shadow,inset 0px 0px 15px #c9c9c9);
 }
 
 .shadowWrap{
@@ -78,6 +89,19 @@ footer {
 	text-align: center;
 }
 
+.info-box{
+	border-radius: 4px;
+	background-color: #fafafa;
+    margin: 0px;
+	& > .info-title{
+		margin-left:2%;
+		font-size:1.3em;
+	}
+	& > .info-text{
+		margin : 15px;
+	}
+}
+
 .box{
 	border-radius: 4px;
 	background-color: #fafafa;
@@ -93,6 +117,10 @@ footer {
 	background: #fafafa;
 	color: #373737;
 	border: 1px solid #c1ccd4;
+}
+
+.span{
+	margin-bottom: 35px;
 }
 
 .shadow{
@@ -126,22 +154,25 @@ footer {
    // display: inline-block;
 }
 
-.footer{
-	background: #474747;
-	padding-top:10px;
-}
-
 .line {
 	border: none;
 	color: #333;
 	background: transparent;
 	border-bottom: 1px solid #999;
 	padding: 5px 2px 0 2px;
+	&:focus{
+  		outline: none;
+		border: none;
+		box-shadow: none ;
+		box-shadow: 0 2px 1px -1px $palette_1_3;
+		border-bottom: 1px solid $palette_2_3;
+  		border-color: #51CBEE;
+	}
 }
 
-.line:focus { 
-  outline: none;
-  border-color: #51CBEE;
+.footer{
+	background: $Footer_BG;
+	padding-top:10px;
 }
 
 .footer a :link {text-decoration:none !important;}
@@ -196,15 +227,16 @@ footer {
 
 
 .break-a{
-	width: 413px;
+	max-width:100%;
 	height: 21px;
-	background: url("../img/break-a.png") no-repeat;
+	background: url("../img/break-a.png") no-repeat 100%;
+	background-position: center; 
 	margin: 0 auto;
 }
 
 .break-b{
-	width: 413px;
+	max-width:100%;
 	height: 21px;
-	background: url("../img/break-b.png") no-repeat;
+	background: url("../img/break-b.png") no-repeat 100%;
 	margin: 0 auto;
 }
