--- a/sass/switch.scss
+++ b/sass/switch.scss
@@ -1,3 +1,6 @@
+@import '_mixins';
+@import '_colors';
+
 .switch {
   cursor: pointer;
   position: relative;
@@ -10,10 +13,13 @@
 
   z-index: 0;
   
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
+
+  @include vendorize(box-sizing,border-box);
+
+  // -webkit-box-sizing: border-box;
+  // -moz-box-sizing: border-box;
+  // -ms-box-sizing: border-box;
+  // box-sizing: border-box;
 
 }
 
@@ -42,23 +48,29 @@
   border: none;
   cursor: default;
 
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
 
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding-box;
-  background-clip: padding-box;
+  @include vendorize(box-sizing,border-box);
+  @include vendorize(background-clip,padding-box);
+  @include vendorize(user-select,none);
+  @include vendorize(text-overflow,ellipsis);
 
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  // -webkit-box-sizing: border-box;
+  // -moz-box-sizing: border-box;
+  // -ms-box-sizing: border-box;
+  // box-sizing: border-box;
 
-  -o-text-overflow: ellipsis;
-  -ms-text-overflow: ellipsis;
-  text-overflow: ellipsis;
+  // -webkit-background-clip: padding-box;
+  // -moz-background-clip: padding-box;
+  // background-clip: padding-box;
+
+  // -webkit-user-select: none;
+  // -moz-user-select: none;
+  // -ms-user-select: none;
+  // user-select: none;
+
+  // -o-text-overflow: ellipsis;
+  // -ms-text-overflow: ellipsis;
+  // text-overflow: ellipsis;
   white-space: nowrap;
 }
 
@@ -78,12 +90,15 @@
 
   -webkit-box-shadow: inset 0 1px #fff;
   box-shadow: inset 0 1px #fff;
+
+
+  @include vendorize(transition,margin-left 0.05s ease-in-out);
   
-  -webkit-transition: margin-left 0.05s ease-in-out;
-  -moz-transition: margin-left 0.05s ease-in-out;
-  -o-transition: margin-left 0.05s ease-in-out;
-  -ms-transition: margin-left 0.05s ease-in-out;
-  transition: margin-left 0.05s ease-in-out;
+  // -webkit-transition: margin-left 0.05s ease-in-out;
+  // -moz-transition: margin-left 0.05s ease-in-out;
+  // -o-transition: margin-left 0.05s ease-in-out;
+  // -ms-transition: margin-left 0.05s ease-in-out;
+  // transition: margin-left 0.05s ease-in-out;
 }
 
 .switch__input:checked + .switch__toggle {
@@ -96,11 +111,13 @@
   
   width: 5rem;
   z-index: -1;
+
+  @include vendorize(box-sizing,border-box);
  
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
+  // -webkit-box-sizing: border-box;
+  // -moz-box-sizing: border-box;
+  // -ms-box-sizing: border-box;
+  // box-sizing: border-box;
 }
 
 .switch__toggle:before {
