--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,41 @@ footer {
   border: 1px solid #c1ccd4;
 }
 
-.span {
+.span[value="1"] {
   margin-bottom: 35px;
+}
+.span[value="2"] {
+  margin-bottom: 70px;
+}
+.span[value="3"] {
+  margin-bottom: 105px;
+}
+.span[value="4"] {
+  margin-bottom: 140px;
+}
+.span[value="5"] {
+  margin-bottom: 175px;
+}
+.span[value="6"] {
+  margin-bottom: 210px;
+}
+.span[value="7"] {
+  margin-bottom: 245px;
+}
+.span[value="8"] {
+  margin-bottom: 280px;
+}
+.span[value="9"] {
+  margin-bottom: 315px;
+}
+.span[value="10"] {
+  margin-bottom: 350px;
+}
+.span[value="11"] {
+  margin-bottom: 385px;
+}
+.span[value="12"] {
+  margin-bottom: 420px;
 }
 
 .shadow {
