--- a/css/modal.css
+++ b/css/modal.css
@@ -1,5 +1,4 @@
 /* General styles for the modal */
-
 .md-perspective,
 .md-perspective {
   height: 100%;
@@ -9,7 +8,7 @@
 .md-perspective {
   background: #222;
   -webkit-perspective: 600px;
-  -ms-perspective: 600px;
+  -moz-perspective: 600px;
   perspective: 600px;
 }
 
@@ -21,12 +20,14 @@
   max-width: 630px;
   min-width: 320px;
   height: auto;
+  max-height: 100%;
   z-index: 2000;
   visibility: hidden;
   -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   backface-visibility: hidden;
   -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
@@ -46,6 +47,7 @@
   opacity: 0;
   background: rgba(51, 51, 51, 0.9);
   -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
   transition: all 0.3s;
   zoom: 2;
 }
@@ -56,13 +58,13 @@
 }
 
 /* Content styles */
-
 .md-content {
   background: url("../img/noise.png");
   background-color: #f4f4f4;
   position: relative;
   border-radius: 3px;
   margin: 0 auto;
+  height: 100%;
 }
 
 .md-content h3 {
@@ -81,6 +83,8 @@
   margin: 0;
   font-weight: 300;
   font-size: 1.15em;
+  overflow-y: scroll;
+  max-height: 80%;
 }
 
 .md-content > div p {
@@ -103,38 +107,39 @@
 }
 
 /* Individual modal styles with animations/transitions */
-
 /* Effect 1: Fade in and scale up */
-
 .md-effect-1 .md-content {
   -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
   -ms-transform: scale(0.7);
   transform: scale(0.7);
   opacity: 0;
   -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .md-show.md-effect-1 .md-content {
   -webkit-transform: scale(1);
+  -moz-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
   opacity: 1;
 }
 
 /* Effect 5: fall */
-
 .md-effect-2.md-modal {
   -webkit-perspective: 1300px;
-  -ms-perspective: 1300px;
+  -moz-perspective: 1300px;
   perspective: 1300px;
 }
 
 .md-effect-2 .md-content {
   -webkit-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-transform: translateZ(600px) rotateX(20deg);
+  -moz-transform: translateZ(600px) rotateX(20deg);
   -ms-transform: translateZ(600px) rotateX(20deg);
   transform: translateZ(600px) rotateX(20deg);
   opacity: 0;
@@ -142,39 +147,57 @@
 
 .md-show.md-effect-2 .md-content {
   -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
   -webkit-transform: translateZ(0px) rotateX(0deg);
+  -moz-transform: translateZ(0px) rotateX(0deg);
   -ms-transform: translateZ(0px) rotateX(0deg);
   transform: translateZ(0px) rotateX(0deg);
   opacity: 1;
 }
 
 /* Effect 10: 3D sign */
-
 .md-effect-3.md-modal {
   -webkit-perspective: 1300px;
-  -ms-perspective: 1300px;
+  -moz-perspective: 1300px;
   perspective: 1300px;
 }
 
 .md-effect-3 .md-content {
   -webkit-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-transform: rotateX(-60deg);
+  -moz-transform: rotateX(-60deg);
   -ms-transform: rotateX(-60deg);
   transform: rotateX(-60deg);
   -webkit-transform-origin: 50% 0;
-  -ms-transform-origin: 50% 0;
+  -moz-transform-origin: 50% 0;
   transform-origin: 50% 0;
   opacity: 0;
   -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .md-show.md-effect-3 .md-content {
   -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
   -ms-transform: rotateX(0deg);
   transform: rotateX(0deg);
   opacity: 1;
+}
+
+@media screen and (max-width: 700px) {
+  .md-modal {
+    height: 99%;
+  }
+
+  .md-content {
+    height: 100%;
+  }
+
+  .md-content > div {
+    max-height: 80%;
+  }
 }
