--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -14,8 +14,8 @@ h1{
   color : $color0;
 }
 
-.wrap { 
-  margin-top: 4%;
+.container { 
+  padding-top: 4%;
 }
 /*landscape phone*/
 @media screen and (max-width: 700px) {
