--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -1,9 +1,11 @@
 .wrap {
-  max-width: 960pc;
+  max-width: 960px;
   padding: 0 10px;
   // padding: 0 1.5rem;
   margin: 0 auto;
-  min-height: 100%;
+  // min-height: 100%;
+  // display: block;
+  clear: both;
   
   position: relative;
   -webkit-box-sizing: border-box;
@@ -11,13 +13,17 @@
           box-sizing: border-box;
 }
 
+.max-height{
+  min-height: 100%;
+}
+
 .grids {
   width: auto;
-  max-width: 960pc;
+  max-width: 960px;
   // margin: 0 0 0 -1.3%;
   list-style: none;
   /* So we can make grids out of lists. */
-  overflow: visible;
+  overflow: hidden;
   /* Clear the floats */
   clear: both;
 }
