--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -28,6 +28,7 @@ $Style_Box : #fafafa;
 $Style_Caption : rgba(0, 0, 0, 0.2);
 $Style_Solid_Border : #c1ccd4;
 $Style_Solid_BG : #fafafa;
+$Style_Inset : rgba(110, 109, 110, .15);
 
 $Style_Footer_BG : #474747;
 
